@@ -79,6 +79,9 @@ class MainWindow(AbstractWindow):
                 'Undo',
                 'Redo',
                 'separator',
+                'EditCopy',
+                'EditPaste',
+                'separator',
                 'EditDelete',
                 'separator',
                 'EditSelectAll',
